include/Win32/Physics.NGDImport.hpp

struct TNewtonCollisionInfoRecord;
struct NewtonJointRecord;
struct NewtonUserMeshCollisionCollideDesc;
struct NewtonUserMeshCollisionRayHitDesc;
struct NewtonHingeSliderUpdateDesc;
struct NewtonUserContactPoint;
struct NewtonMeshDoubleData;
struct NewtonMeshFloatData;
struct NewtonMeshVertexFormat;
//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef __int64 dLong;
typedef float *PdFloat;
typedef double *PdFloat64;
typedef unsigned unsigned_int;
typedef unsigned size_t;
typedef System::StaticArray<System::WideChar, 256> charArray;
typedef charArray *PCharArray;
typedef void * PNewtonMesh;
typedef void * PNewtonBody;
typedef void * PNewtonWorld;
typedef void * PNewtonJoint;
typedef void * PNewtonMaterial;
typedef void * PNewtonCollision;
typedef TNewtonCollisionInfoRecord *PNewtonCollisionInfoRecord;
struct DECLSPEC_DRECORD TNewtonCollisionInfoRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_offsetMatrix;
	TNewtonCollisionMaterial m_collisionMaterial;
	int m_collisionType;
	
public:
	union
	{
		struct 
		{
			TNewtonSceneCollisionParam sdSceneCollision;
		};
		struct 
		{
			TNewtonHeightFieldCollisionParam sdHeightfield;
		};
		struct 
		{
			TNewtonCollisionTreeParam sdTree;
		};
		struct 
		{
			TNewtonCompoundCollisionParam sdCompound;
		};
		struct 
		{
			
		};
		struct 
		{
			TNewtonConvexHullParam sdConvexhull;
		};
		struct 
		{
			TNewtonChamferCylinderParam sdChamfercylinder;
		};
		struct 
		{
			TNewtonCylinderParam sdCylinder;
		};
		struct 
		{
			TNewtonCapsuleParam sdCapsule;
		};
		struct 
		{
			TNewtonSphereParam sdSphere;
		};
		struct 
		{
			TNewtonConeParam shapedata;
		};
		struct 
		{
			TNewtonBoxParam sdbox;
		};
		
	};
};
typedef NewtonJointRecord *PNewtonJointRecord;
struct DECLSPEC_DRECORD NewtonJointRecord
{
public:
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_0;
	System::StaticArray<System::StaticArray<float, 4>, 4> m_attachmenMatrix_1;
	System::StaticArray<float, 3> m_minLinearDof;
	System::StaticArray<float, 3> m_maxLinearDof;
	System::StaticArray<float, 3> m_minAngularDof;
	System::StaticArray<float, 3> m_maxAngularDof;
	void *m_attachBody_0;
	void *m_attachBody_1;
	System::StaticArray<float, 16> m_extraParameters;
	int m_bodiesCollisionOn;
	System::StaticArray<float, 32> m_descriptionType;
};
typedef NewtonUserMeshCollisionCollideDesc *PNewtonUserMeshCollisionCollideDesc;
struct DECLSPEC_DRECORD NewtonUserMeshCollisionCollideDesc
{
public:
	System::StaticArray<float, 4> m_boxP0;
	System::StaticArray<float, 4> m_boxP1;
	System::StaticArray<float, 4> m_boxDistanceTravel;
	int m_threadNumber;
	int m_faceCount;
	int m_vertexStrideInBytes;
	float m_skinThickness;
	void *m_userData;
	void *m_objBody;
	void *m_polySoupBody;
	void *m_objCollision;
	void *m_polySoupCollision;
	float *m_vertex;
	int *m_faceIndexCount;
	int *m_faceVertexIndex;
};
typedef NewtonUserMeshCollisionRayHitDesc *PNewtonUserMeshCollisionRayHitDesc;
struct DECLSPEC_DRECORD NewtonUserMeshCollisionRayHitDesc
{
public:
	System::StaticArray<float, 4> m_p0;
	System::StaticArray<float, 4> m_p1;
	System::StaticArray<float, 4> m_normalOut;
	int m_userIdOut;
	void *m_userData;
};
typedef NewtonHingeSliderUpdateDesc *PNewtonHingeSliderUpdateDesc;
struct DECLSPEC_DRECORD NewtonHingeSliderUpdateDesc
{
public:
	float m_accel;
	float m_minFriction;
	float m_maxFriction;
	float m_timestep;
};
typedef NewtonUserContactPoint *PNewtonUserContactPoint;
struct DECLSPEC_DRECORD NewtonUserContactPoint
{
public:
	System::StaticArray<float, 4> m_point;
	System::StaticArray<float, 4> m_normal;
	__int64 m_shapeId0;
	__int64 m_shapeId1;
	float m_penetration;
	System::StaticArray<int, 3> m_unused;
};
typedef NewtonMeshDoubleData *PNewtonMeshDoubleData;
struct DECLSPEC_DRECORD NewtonMeshDoubleData
{
public:
	double *m_data;
	int *m_indexList;
	int m_strideInBytes;
};
typedef NewtonMeshFloatData *PNewtonMeshFloatData;
struct DECLSPEC_DRECORD NewtonMeshFloatData
{
public:
	float *m_data;
	int *m_indexList;
	int m_strideInBytes;
};
typedef NewtonMeshVertexFormat *PNewtonMeshVertexFormat;
struct DECLSPEC_DRECORD NewtonMeshVertexFormat
{
public:
	int m_faceCount;
	int *m_faceIndexCount;
	int *m_faceMaterial;
	NewtonMeshDoubleData m_vertex;
	NewtonMeshFloatData m_normal;
	NewtonMeshFloatData m_binormal;
	NewtonMeshFloatData m_uv0;
	NewtonMeshFloatData m_uv1;
	NewtonMeshFloatData m_vertexColor;
};
typedef void * __cdecl (*NewtonAllocMemory)(int sizeInBytes);
typedef NewtonAllocMemory *PNewtonAllocMemory;
typedef void __cdecl (*NewtonFreeMemory)(void * ptr, int sizeInBytes);
typedef NewtonFreeMemory *PNewtonFreeMemory;
typedef void __cdecl (*NewtonDestroyWorld)(const void * NewtonWorld);
typedef NewtonDestroyWorld *PNewtonDestroyWorld;
typedef unsigned __cdecl (*NewtonGetTicksCountCallback)(void);
typedef NewtonGetTicksCountCallback *PNewtonGetTicksCountCallback;
typedef void __cdecl (*NewtonSerialize)(void * serializeHandle, const void * buffer, unsigned size);
typedef NewtonSerialize *PNewtonSerialize;
typedef void __cdecl (*NewtonDeserialize)(void * serializeHandle, void * buffer, unsigned size);
typedef NewtonDeserialize *PNewtonDeserialize;
typedef void __cdecl (*NewtonUserMeshCollisionDestroyCallback)(void * descData);
typedef NewtonUserMeshCollisionDestroyCallback *PNewtonUserMeshCollisionDestroyCallback;
typedef void __cdecl (*NewtonUserMeshCollisionCollideCallback)(PNewtonUserMeshCollisionCollideDesc NewtonUserMeshCollisionCollideDesc);
typedef NewtonUserMeshCollisionCollideCallback *PNewtonUserMeshCollisionCollideCallback;
typedef int __cdecl (*NewtonUserMeshCollisionRayHitCallback)(PNewtonUserMeshCollisionRayHitDesc NewtonUserMeshCollisionRayHitDesc);
typedef NewtonUserMeshCollisionRayHitCallback *PNewtonUserMeshCollisionRayHitCallback;
typedef void __cdecl (*NewtonUserMeshCollisionGetCollisionInfo)(void * userData, PNewtonCollisionInfoRecord infoRecord);
typedef NewtonUserMeshCollisionGetCollisionInfo *PNewtonUserMeshCollisionGetCollisionInfo;
typedef int __cdecl (*NewtonUserMeshCollisionGetFacesInAABB)(void * userData, const PdFloat p0, const PdFloat p1, const PdFloat vertexArray, System::PInteger vertexCount, System::PInteger vertexStrideInBytes, const System::PInteger indexList, int maxIndexCount, const System::PInteger userDataList);
typedef NewtonUserMeshCollisionGetFacesInAABB *PNewtonUserMeshCollisionGetFacesInAABB;
typedef float __cdecl (*NewtonCollisionTreeRayCastCallback)(const void * Body, const void * TreeCollision, float interception, PdFloat normal, int faceId, void * usedData);
typedef NewtonCollisionTreeRayCastCallback *PNewtonCollisionTreeRayCastCallback;
typedef float __cdecl (*NewtonHeightFieldRayCastCallback)(const void * Body, const void * HeightFieldCollision, float interception, int Row, int Col, PdFloat normal, int faceId, void * usedData);
typedef NewtonHeightFieldRayCastCallback *PNewtonHeightFieldRayCastCallback;
typedef void __cdecl (*NewtonTreeCollisionCallback)(const void * bodyWithTreeCollision, const void * Body, int faceId, const PdFloat vertex, int vertexStrideInBytes);
typedef NewtonTreeCollisionCallback *PNewtonTreeCollisionCallback;
typedef void __cdecl (*NewtonBodyDestructor)(const void * Body);
typedef NewtonBodyDestructor *PNewtonBodyDestructor;
typedef void __cdecl (*NewtonApplyForceAndTorque)(const void * Body, float timestep, int threadIndex);
typedef NewtonApplyForceAndTorque *PNewtonApplyForceAndTorque;
typedef void __cdecl (*NewtonSetTransform)(const void * Body, const PdFloat matrix, int threadIndex);
typedef NewtonSetTransform *PNewtonSetTransform;
typedef int __cdecl (*NewtonIslandUpdate)(const void * World, void * islandHandle, int bodyCount);
typedef NewtonIslandUpdate *PNewtonIslandUpdate;
typedef void __cdecl (*NewtonBodyLeaveWorld)(const void * Body, int threadIndex);
typedef NewtonBodyLeaveWorld *PNewtonBodyLeaveWorld;
typedef void __cdecl (*NewtonDestroyBodyByExeciveForce)(const void * Body, const void * contact);
typedef NewtonDestroyBodyByExeciveForce *PNewtonDestroyBodyByExeciveForce;
typedef void __cdecl (*NewtonCollisionDestructor)(const void * World, const void * collision);
typedef NewtonCollisionDestructor *PNewtonCollisionDestructor;
typedef int __cdecl (*NewtonCollisionCompoundBreakableCallback)(const void * Mesh, void * userData, PdFloat planeMatrixOut);
typedef NewtonCollisionCompoundBreakableCallback *PNewtonCollisionCompoundBreakableCallback;
typedef int __cdecl (*NewtonGetBuoyancyPlane)(const int collisionID, void * context, const PdFloat globalSpaceMatrix, PdFloat globalSpacePlane);
typedef NewtonGetBuoyancyPlane *PNewtonGetBuoyancyPlane;
typedef unsigned __cdecl (*NewtonWorldRayPrefilterCallback)(const void * Body, const void * collision, void * userData);
typedef NewtonWorldRayPrefilterCallback *PNewtonWorldRayPrefilterCallback;
typedef float __cdecl (*NewtonWorldRayFilterCallback)(const void * Body, const PdFloat hitNormal, int collisionID, void * userData, float intersetParam);
typedef NewtonWorldRayFilterCallback *PNewtonWorldRayFilterCallback;
typedef int __cdecl (*NewtonOnAABBOverlap)(const void * material, const void * body0, const void * body1, int threadIndex);
typedef NewtonOnAABBOverlap *PNewtonOnAABBOverlap;
typedef void __cdecl (*NewtonContactsProcess)(const void * contact, float timestep, int threadIndex);
typedef NewtonContactsProcess *PNewtonContactsProcess;
typedef void __cdecl (*NewtonBodyIterator)(const void * Body, void * userData);
typedef NewtonBodyIterator *PNewtonBodyIterator;
typedef void __cdecl (*NewtonJointIterator)(const void * joint, void * userData);
typedef NewtonJointIterator *PNewtonJointIterator;
typedef void __cdecl (*NewtonCollisionIterator)(void * userData, int vertexCount, const PdFloat FaceArray, int faceId);
typedef NewtonCollisionIterator *PNewtonCollisionIterator;
typedef void __cdecl (*NewtonBallCallBack)(const void * ball, float timestep);
typedef NewtonBallCallBack *PNewtonBallCallBack;
typedef unsigned __cdecl (*NewtonHingeCallBack)(const void * hinge, PNewtonHingeSliderUpdateDesc desc);
typedef NewtonHingeCallBack *PNewtonHingeCallBack;
typedef unsigned __cdecl (*NewtonSliderCallBack)(const void * slider, PNewtonHingeSliderUpdateDesc desc);
typedef NewtonSliderCallBack *PNewtonSliderCallBack;
typedef unsigned __cdecl (*NewtonUniversalCallBack)(const void * universal, PNewtonHingeSliderUpdateDesc desc);
typedef NewtonUniversalCallBack *PNewtonUniversalCallBack;
typedef unsigned __cdecl (*NewtonCorkscrewCallBack)(const void * corkscrew, PNewtonHingeSliderUpdateDesc desc);
typedef NewtonCorkscrewCallBack *PNewtonCorkscrewCallBack;
typedef void __cdecl (*NewtonUserBilateralCallBack)(const void * userJoint, float timestep, int threadIndex);
typedef NewtonUserBilateralCallBack *PNewtonUserBilateralCallBack;
typedef void __cdecl (*NewtonUserBilateralGetInfoCallBack)(const void * userJoint, PNewtonJointRecord info);
typedef NewtonUserBilateralGetInfoCallBack *PNewtonUserBilateralGetInfoCallBack;
typedef void __cdecl (*NewtonConstraintDestructor)(const void * me);
typedef NewtonConstraintDestructor *PNewtonConstraintDestructor;
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" int __cdecl NewtonWorldGetVersion(const void * NewtonWorld);
extern "C" int __cdecl NewtonWorldFloatSize(const void * NewtonWorld);
extern "C" void * __cdecl NewtonCreate(NewtonAllocMemory malloc, NewtonFreeMemory mfree);
extern "C" void __cdecl NewtonDestroy(const void * NewtonWorld);
extern "C" void __cdecl NewtonDestroyAllBodies(const void * NewtonWorld);
extern "C" int __cdecl NewtonGetMemoryUsed(void);
extern "C" void __cdecl NewtonSetMemorySystem(NewtonAllocMemory malloc, NewtonFreeMemory mfree);
extern "C" void __cdecl NewtonUpdate(const void * NewtonWorld, float timestep);
extern "C" void __cdecl NewtonInvalidateCache(const void * NewtonWorld);
extern "C" void __cdecl NewtonCollisionUpdate(const void * NewtonWorld);
extern "C" void __cdecl NewtonSetSolverModel(const void * NewtonWorld, int Model);
extern "C" void __cdecl NewtonSetPlatformArchitecture(const void * NewtonWorld, int mode);
extern "C" int __cdecl NewtonGetPlatformArchitecture(const void * NewtonWorld, PCharArray description);
extern "C" void __cdecl NewtonSetMultiThreadSolverOnSingleIsland(const void * NewtonWorld, int mode);
extern "C" int __cdecl NewtonGetMultiThreadSolverOnSingleIsland(const void * NewtonWorld);
extern "C" void __cdecl NewtonSetPerformanceClock(const void * NewtonWorld, PNewtonGetTicksCountCallback NewtonGetTicksCountCallback);
extern "C" unsigned __cdecl NewtonReadPerformanceTicks(const void * NewtonWorld, unsigned performanceEntry);
extern "C" unsigned __cdecl NewtonReadThreadPerformanceTicks(const void * NewtonWorld, unsigned threadIndex);
extern "C" void __cdecl NewtonWorldCriticalSectionLock(const void * NewtonWorld);
extern "C" void __cdecl NewtonWorldCriticalSectionUnlock(const void * NewtonWorld);
extern "C" void __cdecl NewtonSetThreadsCount(const void * NewtonWorld, int threads);